--- a/src/front/index.html
+++ b/src/front/index.html
@@ -9,7 +9,7 @@
         * { box-sizing: border-box; }
         body { margin: 0; font-family: 'Poppins', sans-serif; background-color: #f9fafb; color: #1f2937; }
 
-        /* Navbar */
+        /* Navbar Styles */
         header {
             background-color: #ffffff;
             box-shadow: 0 2px 10px rgba(0,0,0,0.05);
@@ -28,7 +28,7 @@
         nav a { color: #4b5563; text-decoration: none; font-weight: 500; transition: color 0.2s; }
         nav a:hover { color: #4f46e5; }
         
-        /* Boutons */
+        /* Button Styles */
         .btn-primary {
             background-color: #4f46e5;
             color: white;
@@ -42,7 +42,7 @@
         .btn-logout { background-color: #fee2e2; color: #b91c1c; border: none; padding: 8px 16px; border-radius: 6px; cursor: pointer; font-family: inherit; font-weight: 500; display: none; }
         .btn-logout:hover { background-color: #fecaca; }
 
-        /* Hero Section */
+        /* Hero Section Styles */
         .hero {
             text-align: center;
             padding: 80px 20px;
@@ -88,16 +88,19 @@
 </main>
 
 <script>
+    // Retrieve username from local storage
     const username = localStorage.getItem('username');
     const loginLink = document.getElementById('loginLink');
     const logoutBtn = document.getElementById('logoutBtn');
     const welcomeMsg = document.getElementById('welcomeMsg');
 
+    // If user is logged in, update UI
     if (username) {
         loginLink.style.display = 'none';
         logoutBtn.style.display = 'block';
         welcomeMsg.textContent = `Heureux de vous revoir, ${username}.`;
         
+        // Handle logout functionality
         logoutBtn.addEventListener('click', () => {
             localStorage.removeItem('username');
             window.location.reload();
